--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <heder>
       <div class="container-heder">
-        <div class="row position-relative;">
+        <div class="row position-relative">
           <div class="colum heading-heder">
             <h1 class="heading-font-orange margin-bottom-0">Когнитивные<br>искажения<h1 class="heading-font-black margin-top-0">в программировании</h1></h1>
           </div>
@@ -32,8 +32,17 @@
       </div>
       </div>
     </heder>
-    <div class="container">
-
+    <div class="container-main">
+      <div >
+        <div class="colum align-items-center">
+        <h1 class="heading-font-black margin-bottom-0">Что же это такое,</h1>
+        <h1 class="heading-font-orange margin-top-0">когнитивные искажения?</h1>
+        <p class="margin-bottom-30">Что такое когнитивные искажения. Petrovna Channel</p>
+      </div>
+        <div class="video">
+          <iframe class="video" width="919" height="569" src="https://www.youtube.com/embed/jie9AizBqss" frameborder="0" allowfullscreen></iframe>
+        </div>
+      </div>
     </div>
   </body>
 </html>
