--- a/index.html
+++ b/index.html
@@ -83,9 +83,25 @@
         </div>
       </div>
     </section>
-    <!---->
-    <section>
-      
+    <!-- ikea effect -->
+    <section class="ikea-effect-container">
+      <div class="row align-items-flex-start">
+        <img src="/img/1 1.png" alt="">
+        <div class="colum heder-ikea">
+          <div class="subtitle distortions-ikea ">Когнитивные искажения</div>
+          <h1 class="heading-font-black title-ikea-head">Эффект ИКЕА</h1>
+          <div class="subtitle-ikea-head heading-font-black">Вы переоцениваете собственные решения, и, как следствие, недооцениваете решения других.</div>
+        </div>
+      </div>
+      <div class="colum footer-ikea">
+        <div class="row title-ikea">
+          <h4 class="subtitle text-white">Как проявляется</h4>
+        </div>
+        <div class="row">
+          <div class="colum text-ikea subtitle">Когнитивное искажение называется так из-за того, что потребители зачастую предпочитают покупать товары, которые они могут собрать сами, а не уже собранные кем-то.</div>
+        <div class="colum text-ikea subtitle">Мы склонны переоцнивать наши собственные решения и недооценивать решения других. Если вы когда-то работали в компании, которая использовала тупой внутренний инструмент вместо более удобного готового решения, вы понимаете, о чём я говорю.</div>
+        </div>
+      </div>
     </section>
     <!---->
     <section>
